--- a/src/components/carousel.css
+++ b/src/components/carousel.css
@@ -1,72 +1,11 @@
 .custom-card {
-  width: 190px;
-  height: 254px;
+  width: 100%;
+  height: 90vh;
   border-radius: 30px;
-  background: #e0e0e0;
-  box-shadow: 15px 15px 30px #bebebe,
-             -15px -15px 30px #ffffff;
+  /* background: transparent; */
+  opacity: 1;
 }
 
-/* From Uiverse.io by adamgiebl */
-.card {
-  --background: linear-gradient(to left, #a5c1e7 0%, #9b59b6 100%);
-  width: 200px;
-  height: 270px;
-  padding: 10px;
-  border-radius: 1rem;
-  overflow: visible;
-  background: #a5c1e7;
-  background: var(--background);
-  position: relative;
-  z-index: 1;
-}
-
-.card::after {
-  position: absolute;
-  content: "";
-  top: 40px;
-  left: 0;
-  right: 0;
-  z-index: -1;
-  height: 100%;
-  width: 100%;
-  transform: scale(0.85);
-  filter: blur(30px);
-  background: #a5c1e7;
-  background: var(--background);
-  transition: opacity 0.5s;
-}
-
-.card-info {
-  --color: #ffffff;
-  background: var(--color);
-  color: var(--color);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  overflow: visible;
-  border-radius: 0.6rem;
-}
-
-.card .title {
-  font-weight: bold;
-  letter-spacing: 0.2em;
-  text-align: center;
-}
-
-/*Hover*/
-.card:hover::after {
-  opacity: 0;
-}
-
-.card:hover .card-info {
-  color: #a5c1e7;
-  transition: color 1s;
-}
-
-
-.swiper {
-    padding: 2rem;
+h2 {
+  -webkit-text-stroke: 2px white;
 }
