--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Teko:wght@300..700&display=swap');
 @import "tailwindcss";
 @import "flowbite/src/themes/enterprise";
 @plugin "flowbite/plugin";
@@ -6,5 +6,6 @@
 
 @theme {
   --font-mulish: "Mulish", "sans-serif";
+  --font-teko: "Teko", "sans-serif";
   /* Define custom font stacks */
 }
