--- a/src/sections/carousel.css
+++ b/src/sections/carousel.css
@@ -1,9 +1,20 @@
 .custom-card {
   width: 100%;
-  height: 90vh;
   border-radius: 30px;
+  padding-bottom: 5rem;
   /* background: transparent; */
   opacity: 1;
+}
+
+@media (min-width:768px) {
+  .custom-card {
+    height: 70vh;
+    padding-bottom: 0;
+  }
+
+  .Swiper {
+    padding-top: 0 !important;
+  }
 }
 
 /* h2 {
